fixed spacing on page

--- a/co.lab-team-10/src/pages/chats/chats.css
+++ b/co.lab-team-10/src/pages/chats/chats.css
@@ -3,6 +3,7 @@
   justify-content: center;
   margin-bottom: 2px;
   height: 64vh;
+  margin-top: 146px;
 }
 
 .info-holder {
